src/test/ui/loops/loops-reject-lifetime-shadowing-label.stderr
warning: lifetime name `'a` shadows a label name that is already in scope
  --> $DIR/loops-reject-lifetime-shadowing-label.rs:31:51
   |
LL |     'a: loop {
   |     -- first declared here
LL |         let b = Box::new(|x: &i8| *x) as Box<for <'a> Fn(&'a i8) -> i8>;
   |                                                   ^^ lifetime 'a already in scope

error: compilation successful
  --> $DIR/loops-reject-lifetime-shadowing-label.rs:39:1
   |
LL | / pub fn main() { //~ ERROR compilation successful
LL | |     foo();
LL | | }
   | |_^

error: aborting due to previous error

